improvement(index, responsive-ui, cove-manila, the-restaurants, countdown): responsive UI for 80% pt

--- a/src/sass/themes/countdown-section.scss
+++ b/src/sass/themes/countdown-section.scss
@@ -16,6 +16,14 @@
   }
 }
 
+@include media-breakpoint-up(lg) {
+  .countdown-container {
+    .number-of {
+      font-size: 80px !important;
+    }
+  }
+}
+
 // FOR TABLETS & UP
 @include media-breakpoint-up(md) {
   .countdown-container {
