--- a/src/sass/themes/cove-manila.scss
+++ b/src/sass/themes/cove-manila.scss
@@ -259,6 +259,166 @@
   }
 }
 
+@include media-breakpoint-up(md) {
+  .container,
+  .container-fluid,
+  .main-container {
+    // .cove-manila-row,
+    // .cove-manila-row-1,
+    // .cove-manila-row-2 {
+    //   background-color: $black;
+    // }
+
+    .cove-manila-row {
+      height: 60vw;
+
+      .cove-manila-logo {
+        height: 17rem;
+      }
+
+      .cove-manila-logo-caption {
+        font-size: inherit;
+        letter-spacing: 0.5em;
+      }
+    }
+
+    .cove-manila-row-1 {
+      height: 60vw;
+    }
+
+    // DJ SOLAII
+    .featured-dj-1 {
+      // TODO: Set gradient on borders
+      // border: $color-okada-normal-4 1px solid;
+
+      .dj-solaii-head {
+        @include display-bg-image('dj-solaii-head', 95% bottom, auto);
+        // bottom: 0;
+        height: 40vw;
+        // min-width: 196.93;
+        // padding: 0;
+        // position: absolute;
+      }
+
+      .dj-solaii-wrapper {
+        min-height: 138.89px;
+      }
+
+      .dj-solaii-details {
+        padding: 0;
+        position: absolute;
+        right: 0;
+        top: 15.26px;
+
+        .dj-solaii-logo {
+          @include display-bg-image('dj-solaii-logo', center, auto);
+          margin: 0 auto;
+          min-height: 37.94px;
+          min-width: 133.93;
+        }
+
+        .dj-solaii-desc-wrapper,
+        .dj-solaii-button-container {
+          margin-left: 15px;
+          margin-right: 15px;
+        }
+
+        .dj-solaii-desc-wrapper {
+          border: $color-okada-normal-4 1px solid;
+          margin-top: 0.55em;
+          max-height: 133.15px;
+          padding: 0 15px 0 40px;
+          position: relative;
+
+          // TODO: DRY these paragraph styles
+          .dj-solaii-desc {
+            color: $white;
+            font-family: 'Gotham Medium';
+            font-size: 9px;
+            margin-bottom: 0;
+          }
+        }
+
+        // BUTTON ADJUSTMENTS
+        // For DJ SOLAII
+        .dj-solaii-button-container {
+          .visit-channel-button {
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    // DJ KAKA
+    .featured-dj-2 {
+      margin-top: 30px;
+
+      .grid-container {
+        // display: grid;
+        // grid-template-areas: 'dj-kaka-head-wrapper dj-kaka-details-wrapper';
+        // grid-template-columns: 1.3fr 0.7fr;
+        // grid-template-rows: 1fr;
+        // height: 20vw;
+      }
+
+      // TODO: Not yet tested for larger devices
+      .dj-kaka-head-wrapper {
+        border: $color-okada-normal-4 1px solid;
+        grid-area: dj-kaka-head-wrapper;
+        min-height: 220px;
+        position: absolute;
+        top: 30%;
+        width: 59%;
+
+        .dj-kaka-head {
+          position: inherit;
+          top: -96px;
+          width: 100%;
+        }
+      }
+
+      .dj-kaka-details-wrapper {
+        align-self: end;
+        display: flex;
+        flex-direction: column;
+        grid-area: dj-kaka-details-wrapper;
+
+        .dj-kaka-details-container {
+          border: $color-okada-normal-4 1px solid;
+          max-height: 133.15px;
+          padding: 0 15px 0 40px;
+          position: relative;
+
+          .dj-kaka-details {
+            transform: translateY(-1.9em);
+          }
+        }
+
+        .dj-kaka-name {
+          color: $color-okada-dark-1;
+          font-family: 'Gotham Black';
+          font-size: 42px;
+          line-height: 0.65em;
+          // margin-bottom: 20px;
+        }
+
+        // TODO: DRY these paragraph styles
+        .dj-kaka-desc {
+          color: $white;
+          font-family: 'Gotham Medium';
+          font-size: 9px;
+          margin-bottom: 0;
+        }
+
+        .dj-kaka-button-container {
+          display: flex;
+          flex-direction: row-reverse;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 400px) {
   .container,
   .container-fluid,
