--- a/src/sass/themes/cove-manila.scss
+++ b/src/sass/themes/cove-manila.scss
@@ -185,9 +185,10 @@
       width: 59%;
 
       .dj-kaka-head {
+        @include display-bg-image('dj-kaka', center bottom, auto);
+        min-height: $cove-dj-kaka-height;
         position: inherit;
         top: -96px;
-        width: 100%;
       }
     }
 
@@ -259,7 +260,8 @@
   }
 }
 
-@include media-breakpoint-up(md) {
+// TABLETS BELOW
+@include media-breakpoint-down(md) {
   .container,
   .container-fluid,
   .main-container {
@@ -290,6 +292,7 @@
     .featured-dj-1 {
       // TODO: Set gradient on borders
       // border: $color-okada-normal-4 1px solid;
+      border-width: 2px;
 
       .dj-solaii-head {
         @include display-bg-image('dj-solaii-head', 95% bottom, auto);
@@ -301,7 +304,7 @@
       }
 
       .dj-solaii-wrapper {
-        min-height: 138.89px;
+        min-height: 26.5em;
       }
 
       .dj-solaii-details {
@@ -313,8 +316,8 @@
         .dj-solaii-logo {
           @include display-bg-image('dj-solaii-logo', center, auto);
           margin: 0 auto;
-          min-height: 37.94px;
-          min-width: 133.93;
+          min-height: 76px; // NOTE: This is for 2x reso image
+          min-width: 268px;
         }
 
         .dj-solaii-desc-wrapper,
@@ -371,6 +374,7 @@
         width: 59%;
 
         .dj-kaka-head {
+          min-height: $cove-dj-kaka-height-x2;
           position: inherit;
           top: -96px;
           width: 100%;
@@ -414,6 +418,258 @@
           display: flex;
           flex-direction: row-reverse;
         }
+      }
+    }
+  }
+}
+
+// DESKTOP UP
+@include media-breakpoint-up(lg) {
+  .main-container {
+    margin-bottom: 30em;
+
+    .cove-manila-row {
+      height: 60vw;
+
+      .cove-manila-logo {
+        height: 17rem;
+      }
+
+      .cove-manila-logo-caption {
+        font-size: inherit;
+        letter-spacing: 0.5em;
+      }
+    }
+
+    .cove-manila-row-1,
+    .cove-manila-row-2 {
+      height: 60vw;
+    }
+
+    .cove-manila-row-1 {
+      background-position-y: top;
+    }
+
+    .cove-manila-row-2 {
+      background-position-y: top;
+      padding: 0;
+    }
+
+    .cove-manila-row-1-sub-2 {
+      height: 22em;
+      // margin-top: 29em;
+    }
+
+    // DJ SOLAII
+    .featured-dj-1 {
+      // TODO: Set gradient on borders
+      // border: $color-okada-normal-4 1px solid;
+      border-width: 2px;
+
+      .dj-solaii-head {
+        @include display-bg-image('dj-solaii-head', 95% bottom, auto);
+        // bottom: 0;
+        height: 40vw;
+        // min-width: 196.93;
+        // padding: 0;
+        // position: absolute;
+      }
+
+      .dj-solaii-wrapper {
+        min-height: 26.5em;
+      }
+
+      .dj-solaii-details {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        position: absolute;
+        right: 0;
+        top: 4em;
+
+        .dj-solaii-logo {
+          @include display-bg-image('dj-solaii-logo', center, auto);
+          margin: 0 auto;
+          min-height: 114px; // NOTE: This is for 3x reso image
+          min-width: $cove-dj-solaii-width-x3;
+        }
+
+        .dj-solaii-desc-wrapper,
+        .dj-solaii-button-container {
+          margin-left: 15px;
+          margin-right: 15px;
+        }
+
+        .dj-solaii-desc-wrapper {
+          align-self: center;
+          // border: $color-okada-normal-4 1px solid;
+          border-width: 2px;
+          height: 9.6vw;
+          margin-top: 4em;
+          max-height: unset;
+          position: relative;
+          width: $cove-dj-solaii-width-x3;
+
+          // TODO: DRY these paragraph styles
+          .dj-solaii-desc {
+            color: $white;
+            font-family: 'Gotham Medium';
+            font-size: 23px;
+            margin-bottom: 0;
+          }
+        }
+
+        // BUTTON ADJUSTMENTS
+        // For DJ SOLAII
+        .dj-solaii-button-container {
+          align-self: center;
+
+          .visit-channel-button {
+            border-width: 2px;
+            width: $cove-dj-solaii-width-x3;
+          }
+        }
+      }
+    }
+
+    // DJ KAKA
+    .featured-dj-2 {
+      margin-top: unset; // TODO: Remove this on mobile view
+      top: -20em;
+
+      // TODO: Not yet tested for larger devices
+      .dj-kaka-head-wrapper {
+        // border: $color-okada-normal-4 1px solid;
+        border-width: 2px;
+        grid-area: dj-kaka-head-wrapper;
+        left: 2.8em;
+        min-height: $cove-dj-kaka-wrapper-height-x3;
+        position: absolute;
+        top: 100%;
+        width: $cove-dj-kaka-width-x3;
+
+        .dj-kaka-head {
+          min-height: $cove-dj-kaka-height-x3;
+          position: inherit;
+          top: -20.21em;
+          width: 100%;
+        }
+      }
+
+      .dj-kaka-details-wrapper {
+        align-self: end;
+        display: flex;
+        flex-direction: column;
+        grid-area: dj-kaka-details-wrapper;
+        position: absolute;
+        right: 15%;
+        top: 155%;
+        width: 50%;
+
+        .dj-kaka-details-container {
+          // border: $color-okada-normal-4 1px solid;
+          border-width: 2px;
+          height: 20em;
+          max-height: unset;
+          padding: 0 15px 0 40px;
+          position: relative;
+
+          .dj-kaka-details {
+            transform: translate(7em, -4.4em);
+            width: 68%;
+          }
+        }
+
+        .dj-kaka-name {
+          color: $color-okada-dark-1;
+          font-family: 'Gotham Black';
+          font-size: 6em;
+          line-height: 0.7em;
+          margin-bottom: 25px;
+        }
+
+        // TODO: DRY these paragraph styles
+        .dj-kaka-desc {
+          color: $white;
+          font-family: 'Gotham Medium';
+          font-size: 28px;
+          margin-bottom: 0;
+        }
+
+        .dj-kaka-button-container {
+          display: flex;
+          flex-direction: row-reverse;
+        }
+      }
+    }
+
+    // FEATURED DJ BELOW
+    .cove-manila-row-2-sub-2 {
+      margin-top: 65em;
+      position: relative;
+
+      .featured-dj-below {
+        .featured-dj-below-profile {
+          border-width: 2px;
+          padding: 6em 1em;
+        }
+
+        .featured-dj-below-profile-image {
+          bottom: 8em;
+          height: 29vw;
+          width: 28vw;
+        }
+
+        .featured-dj-below-profile-details {
+          padding: 0 1em;
+          top: 5em;
+          width: 30vw;
+
+          .featured-dj-name {
+            font-size: 28px;
+          }
+
+          .featured-dj-name-desc {
+            font-size: 20px;
+          }
+        }
+      }
+    }
+
+    // COMPONENTS =====================
+
+    .visit-channel-button {
+      // border: $color-okada-normal-4 1px solid;
+      border-radius: 0;
+      // border-top: 0 !important;
+      border-width: 2px;
+      padding: 2.75rem 0.75rem;
+      width: calc(100% - 7.8em);
+
+      &:hover,
+      &:active,
+      &:focus {
+        background: $dazzling-mask-color;
+        box-shadow: unset;
+
+        .visit-channel-text {
+          @include dazzling-text-disable;
+          color: $black;
+        }
+      }
+    }
+
+    .visit-channel-text {
+      @include dazzling-text;
+      // color: $color-okada-dark-1;
+      // font-family: 'Roboto Bold Italic';
+      font-size: 28px;
+      // margin: 0;
+
+      &:hover,
+      &:active,
+      &:focus {
+        @include dazzling-text-disable;
       }
     }
   }
