--- a/src/sass/themes/others.scss
+++ b/src/sass/themes/others.scss
@@ -313,7 +313,42 @@ body {
       .dazzling-details {
         // color: $white;
         // font-family: 'Gotham Book';
-        font-size: 14px;
+        font-size: 24px;
+      }
+    }
+
+    // THE RESTAURANTS
+    .the-restaurants-row {
+      flex-direction: row-reverse;
+    }
+
+    .the-restaurants-col {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .the-restaurants-content {
+        padding: 0 5em;
+      }
+
+      .the-restaurants-logo {
+        background-size: contain;
+        height: 120px;
+        margin-bottom: 15px;
+        width: 100%;
+      }
+
+      .the-restaurants-heading {
+        // color: $hero-caption-color-darker;
+        font-size: 75px;
+        line-height: 4rem;
+        // width: 60%;
+      }
+
+      .okada-hero-caption {
+        font-family: 'Gotham Book';
+        font-size: 24px;
       }
     }
   }
