improvement(animations, wow, mobile): disable animations on mobile
Disabled the feature because of wowjs library bug on iOS

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 
 // 7-1 pattern
 @import 'variables';
+@import 'animations';
 @import 'utils/mixins';
 @import 'base/colors';
 @import 'base/typography';
