--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@
 @import 'layout/grid';
 
 // Theming
+@import 'themes/mobile';
 @import 'themes/hero-section';
 @import 'themes/countdown-section';
 @import 'themes/cove-manila';
