--- a/src/sass/themes/hero-section.scss
+++ b/src/sass/themes/hero-section.scss
@@ -34,6 +34,12 @@
       grid-column: 1 / span 2;
     }
 
+    // @include media-breakpoint-down(sm) {
+    //   .image-2020 {
+    //     background-position: 9px center;
+    //   }
+    // }
+
     @include media-breakpoint-down(md) {
       .image-2020 {
         background-size: auto;
@@ -69,12 +75,6 @@
         background-position: right bottom;
       }
     }
-
-    @include media-breakpoint-down(sm) {
-      .image-2020 {
-        background-position: 9px center;
-      }
-    }
   }
 }
 
@@ -82,8 +82,24 @@
 @media screen and (max-width: 480px) {
   .main-container {
     .hero-row {
+      .image-2020 {
+        background-position: 1em bottom;
+        background-size: 75%;
+      }
+
       .image-hero-model {
-        background-position: 150% bottom !important;
+        background-position: 150% bottom;
+        background-size: 80%;
+      }
+    }
+
+    .guests-row {
+      .guest-entry {
+        .guest-info-container .guest-image.mayonnaise {
+          // background-position: center bottom;
+          // background-repeat: no-repeat;
+          background-size: 115% !important;
+        }
       }
     }
   }
