--- a/src/sass/themes/cove-manila.scss
+++ b/src/sass/themes/cove-manila.scss
@@ -665,6 +665,93 @@
   }
 }
 
+// FOR LOWER LAPTOP SCREENS BELOW (incl. Tablets)
+// Not working for Bootstrap XL breakpoint
+// @include media-breakpoint-down(xl) {
+//   .main-container {}
+// }
+
+@media screen and (max-width: 1400px) {
+  .main-container {
+    // DJ SOLAII
+    .dj-solaii-details {
+      .dj-solaii-desc-wrapper {
+        height: 11.5em !important;
+      }
+    }
+
+    // DJ KAKA
+    .featured-dj-2 {
+      margin-top: unset; // TODO: Remove this on mobile view
+      top: -20em;
+
+      // TODO: Not yet tested for larger devices
+      .dj-kaka-head-wrapper {
+        // border: $color-okada-normal-4 1px solid;
+        border-width: 2px;
+        grid-area: dj-kaka-head-wrapper;
+        left: 2.8em;
+        min-height: $cove-dj-kaka-wrapper-height-x3;
+        position: absolute;
+        top: 100%;
+        width: $cove-dj-kaka-width-x3;
+
+        .dj-kaka-head {
+          min-height: $cove-dj-kaka-height-x3;
+          position: inherit;
+          top: -20.21em;
+          width: 100%;
+        }
+      }
+
+      .dj-kaka-details-wrapper {
+        // align-self: end;
+        // display: flex;
+        // flex-direction: column;
+        grid-area: dj-kaka-details-wrapper;
+        // position: absolute;
+        right: 0.6vw;
+        top: 155%;
+        width: 50%;
+
+        // .dj-kaka-details-container {
+        //   border-width: 2px;
+        //   height: 20em;
+        //   max-height: unset;
+        //   padding: 0 15px 0 40px;
+        //   position: relative;
+
+        //   .dj-kaka-details {
+        //     transform: translate(7em, -4.4em);
+        //     width: 68%;
+        //   }
+        // }
+
+        .dj-kaka-name {
+          // color: $color-okada-dark-1;
+          // font-family: 'Gotham Black';
+          font-size: 6em;
+          line-height: 0.7em;
+          margin-bottom: 25px;
+        }
+
+        // TODO: DRY these paragraph styles
+        .dj-kaka-desc {
+          // color: $white;
+          // font-family: 'Gotham Medium';
+          font-size: 24px;
+          margin-bottom: 0;
+        }
+
+        .dj-kaka-button-container {
+          display: flex;
+          flex-direction: row-reverse;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 400px) {
   .container,
   .container-fluid,
