--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -15,6 +15,27 @@ $color-okada-normal-7: #d69b3f;
 $color-okada-dark-1: #cd8634;
 $color-okada-dark-2: #b67c30;
 
+// others
+$okada-logo-color: #f0e6c3;
+$navbar-primary-color: #f8d76d;
+$hero-section-right-color: #ce8735;
+$countdown-color: $color-okada-dark-1;
+$hero-heading-color: $color-okada-dark-1;
+$hero-caption-color: #828282;
+$hero-caption-color-darker: #575756;
+$hero-gray-bg-color-1: #e8e8e8;
+$hero-gray-bg-color-2: #c2c2c1;
+$caption-color: $hero-caption-color;
+$footer-text-color: $hero-gray-bg-color-2;
+
+// navbars
+$navbar-okada-icon-bg-color: rgba($navbar-primary-color, 0.5) !default;
+$navbar-okada-icon-bg: str-replace(
+  url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='#{$navbar-okada-icon-bg-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"),
+  '#',
+  '%23'
+) !default;
+
 // hero section
 $hero-section-bg: linear-gradient(
   135deg,
@@ -25,20 +46,6 @@ $hero-section-bg: linear-gradient(
   rgba(205, 134, 52, 1) 79%,
   rgba(182, 124, 48, 1) 100%
 );
-
-// with gradient
-// for: the fountain
-// $dazzling-mask-color: linear-gradient(
-//   39deg,
-//   rgba(182, 124, 48, 1) 0%,
-//   rgba(205, 134, 52, 1) 30%,
-//   rgba(205, 135, 52, 1) 41%,
-//   rgba(208, 142, 56, 1) 52%,
-//   rgba(213, 154, 62, 1) 61%,
-//   rgba(215, 158, 64, 1) 70%,
-//   rgba(255, 212, 134, 1) 80%,
-//   rgba(226, 176, 88, 1) 90%
-// );
 
 // guest name
 $guest-name-info-bg: linear-gradient(
@@ -72,20 +79,7 @@ $okada-base-gradient: linear-gradient(
   #{$okada-base-gradient-color-7} 71%,
   #{$okada-base-gradient-color-8} 100%
 );
-
 $dazzling-mask-color: $okada-base-gradient;
-
-// others
-$navbar-primary-color: #f8d76d;
-$hero-section-right-color: #ce8735;
-$countdown-color: $color-okada-dark-1;
-$hero-heading-color: $color-okada-dark-1;
-$hero-caption-color: #828282;
-$hero-caption-color-darker: #575756;
-$hero-gray-bg-color-1: #e8e8e8;
-$hero-gray-bg-color-2: #c2c2c1;
-$caption-color: $hero-caption-color;
-$footer-text-color: $hero-gray-bg-color-2;
 
 // IDK about the terms of it
 $common-shining-mask-bg: $dazzling-mask-color;
