--- a/src/sass/components/navbar.scss
+++ b/src/sass/components/navbar.scss
@@ -4,46 +4,41 @@
 
   &.okada * {
     color: $navbar-primary-color !important;
+
+    &.nav-link {
+      color: $okada-logo-color !important;
+    }
   }
 
   &.okada .navbar-toggler-icon {
-    border-color: $navbar-primary-color !important;
+    background: $navbar-okada-icon-bg !important;
   }
 
-  &.navbar-trans {
-    background: transparent;
-    transition: 0.1s ease;
-  }
+  // &.navbar-trans {
+  //   background: transparent;
+  //   transition: 0.1s ease;
+  // }
 
   &.justify-content-center {
     .navbar-brand {
       left: 50%;
-      position: absolute;
+      position: relative;
       top: 0;
       transform: translateX(-50%);
     }
 
-    .navbar-toggle {
-      position: absolute;
-      right: 0;
-    }
+    // .navbar-toggle {
+    //   position: absolute;
+    //   right: 0;
+    // }
 
-    .navbar-collapse {
-      margin-top: 40px;
-    }
+    // .navbar-collapse {
+    //   margin-top: 40px;
+    // }
   }
 
   .navbar-toggler {
-    display: flex;
-    flex-direction: column;
-
-    .line {
-      width: 25px !important;
-      // float: left;
-      height: 2px;
-      background-color: $navbar-primary-color;
-      margin-bottom: 5px;
-    }
+    border: 0;
 
     &,
     &:active,
@@ -59,26 +54,77 @@
     top: 10px;
   }
 
-  // .navbar-brand {
-  // }
+  .navbar-brand {
+    left: calc(50% - 1em);
+    position: absolute;
+    top: 10px;
+  }
 
-  @include media-breakpoint-up(md) {
+  &.collapse {
+    .navbar-nav {
+      align-items: flex-end;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+
+      &,
+      &.mx-auto,
+      &.ml-auto,
+      &.mr-auto {
+        font-size: 0.8em;
+        position: relative;
+        text-transform: uppercase;
+        top: 4rem; // top: -0.5rem;
+      }
+    }
+  }
+
+  &.collapse.show {
+    .navbar-nav {
+      align-items: unset;
+      display: inherit;
+      justify-content: unset;
+      width: unset;
+
+      &,
+      &.mx-auto,
+      &.ml-auto,
+      &.mr-auto {
+        font-size: 0.8em;
+        position: normal;
+        // text-transform: uppercase;
+        top: unset;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .navbar {
     min-height: $navbar-md-height;
+    position: relative;
+    top: 0;
+    width: 100%;
 
     .navbar-toggler-right {
       right: 3em;
-      top: 2em;
+      // top: 40%;
+      top: 1.5em;
     }
 
     .navbar-brand {
-      left: 50%;
-      position: absolute;
-      top: 0;
-      transform: translateX(-50%);
-
       img {
-        transform: translateY(24px);
         width: 100px;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .navbar {
+    .navbar-brand {
+      img {
+        width: 52.47px;
       }
     }
   }
