improvement(browser, safari, javascript, inline): browser specific style bugfixes

--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -78,3 +78,12 @@
   background: unset;
   background-clip: unset;
 }
+
+// Source: http://aslanbakan.com/en/blog/browser-and-device-specific-css-styles-with-sass-and-less-mixins/
+@mixin browser($browsers: Mozilla) {
+  @each $browser in $browsers {
+    html[data-browser*='#{$browser}'] & {
+      @content;
+    }
+  }
+}
