--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -1,7 +1,13 @@
 @import 'vendors/bootstrap4/bootstrap';
+@import 'utils/mixins';
 
 .wow {
   @include media-breakpoint-down(sm) {
+    animation: none !important;
+    visibility: visible !important;
+  }
+
+  @include browser(Safari) {
     animation: none !important;
     visibility: visible !important;
   }
