style(navbar): remove calculated navbar height > set default

--- a/src/sass/layout/grid.scss
+++ b/src/sass/layout/grid.scss
@@ -61,7 +61,7 @@
     margin-top: -#{$navbar-md-height};
 
     .hero-row {
-      padding-top: calc(#{$navbar-md-height} + 25px);
+      padding-top: $navbar-md-height;
     }
 
     .countdown-row {
