--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,3 +1,10 @@
+// typography
+$font-family-open-sans: 'Open Sans', Verdana, sans-serif;
+$font-family-roboto-bold-italic: 'Roboto Bold Italic', Arial, Helvetica, sans-serif;
+$font-family-gotham-book: 'Gotham Book', 'Open Sans', 'Roboto', Verdana, sans-serif;
+$font-family-gotham-light: 'Gotham Light', 'Open Sans', Verdana, sans-serif;
+$font-family-gotham-medium: 'Gotham Medium', 'Roboto', Arial, sans-serif;
+
 // reusable
 $default-padding-px: 19px;
 
