refactor(fonts, open-sans, sass): added fallback fonts including open sans

--- a/src/sass/components/buttons.scss
+++ b/src/sass/components/buttons.scss
@@ -1,5 +1,5 @@
 .btn-dazzling {
-  font-family: 'Gotham Black';
+  font-family: $font-family-gotham-black;
   font-size: 11px;
   background-color: transparent;
   border-color: $color-okada-light-1;
