--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -22,12 +22,6 @@ body {
   font-weight: normal;
 }
 
-// OPEN SANS TEST
-.johnny-sans {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: bold;
-}
-
 .okada-hero {
   margin-top: 34px;
   text-align: center;
@@ -35,14 +29,14 @@ body {
 
 .okada-hero-heading {
   color: $hero-heading-color;
-  font-family: 'Gotham Black', sans-serif;
+  font-family: $font-family-gotham-medium;
   font-size: 22px;
 }
 
 .container-caption,
 .okada-hero-caption {
   color: $hero-caption-color;
-  font-family: 'Gotham Medium', sans-serif;
+  font-family: $font-family-gotham-medium;
   font-size: 14px;
   // text-align: center;
 }
