--- a/src/sass/themes/countdown-section.scss
+++ b/src/sass/themes/countdown-section.scss
@@ -5,7 +5,7 @@
 
   .number-of {
     color: $countdown-color;
-    font-family: 'Gotham Light', sans-serif;
+    font-family: $font-family-gotham-light;
     font-size: 48px;
     text-align: center;
     width: 40%;
