--- a/src/sass/themes/mobile.scss
+++ b/src/sass/themes/mobile.scss
@@ -120,7 +120,7 @@ body {
           // TODO: DRY these paragraph styles
           .dj-solaii-desc {
             color: $white;
-            font-family: 'Gotham Medium';
+            font-family: $font-family-gotham-medium;
             font-size: 9px;
             margin-bottom: 0;
           }
