--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,9 +1,11 @@
 // typography
-$font-family-open-sans: 'Open Sans', Verdana, sans-serif;
-$font-family-roboto-bold-italic: 'Roboto Bold Italic', Arial, Helvetica, sans-serif;
+$font-family-open-sans: 'Open Sans', serif;
+$font-family-roboto-bold-italic: 'Roboto Bold Italic', 'Open Sans', Helvetica, sans-serif;
 $font-family-gotham-book: 'Gotham Book', 'Open Sans', 'Roboto', Verdana, sans-serif;
+$font-family-gotham-black: 'Gotham Black', 'Arial Black', sans-serif;
 $font-family-gotham-light: 'Gotham Light', 'Open Sans', Verdana, sans-serif;
-$font-family-gotham-medium: 'Gotham Medium', 'Roboto', Arial, sans-serif;
+$font-family-gotham-medium: 'Gotham Medium', 'Open Sans', 'Roboto', sans-serif;
+$font-family-playfair-display-regular: 'Fairplay Display', 'Times New Roman', Georgia, sans-serif;
 
 // reusable
 $default-padding-px: 19px;
