fix(responsive, mobile, fonts, cove-manila): adjustments

--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -31,6 +31,7 @@ body {
   color: $hero-heading-color;
   font-family: $font-family-gotham-medium;
   font-size: 22px;
+  font-weight: bold;
 }
 
 .container-caption,
