--- a/src/sass/themes/cove-manila.scss
+++ b/src/sass/themes/cove-manila.scss
@@ -597,7 +597,8 @@
 
     // FEATURED DJ BELOW
     .cove-manila-row-2-sub-2 {
-      margin-top: 50%;
+      height: 40em;
+      margin-top: 30%;
       position: absolute;
       width: 100%;
 
