--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import 'components/buttons';
 @import 'components/footer';
 @import 'components/navbar';
+@import 'components/nav-overlay';
 @import 'components/swiper';
 @import 'layout/grid';
 
