--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,5 @@
 // typography
+// NOTE: GOTHAM FAMILY CURRENTLY NOT WORKS ON SAFARI
 $font-family-open-sans: 'Open Sans', serif;
 $font-family-roboto-bold-italic: 'Roboto Bold Italic', 'Open Sans', Helvetica, serif;
 $font-family-gotham-book: 'Gotham Book', 'Open Sans', 'Roboto', Verdana, serif;
