--- a/src/sass/components/nav-overlay.scss
+++ b/src/sass/components/nav-overlay.scss
@@ -12,9 +12,9 @@
   .nav-modal-link {
     color: $color-okada-dark-1;
     display: block;
-    font-family: $font-family-gotham-light;
+    font-family: $font-family-open-sans;
     font-size: 36px;
-    // font-weight: 600;
+    font-weight: 300;
     padding: 8px;
     text-decoration: none;
     transition: 0.3s;
