--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -1,49 +1,15 @@
 // font-face
-// Built from https://css-tricks.com/snippets/css/using-font-face/
-@mixin font-face($font-name, $font-path, $font-weight: 400, $font-style: normal, $support-required: 'modern') {
+// Custom version
+// Reference: https://css-tricks.com/snippets/css/using-font-face/
+@mixin font-face($font-name, $font-path, $font-weight: 400, $font-style: normal) {
   @font-face {
+    font-display: swap;
     font-family: $font-name;
     font-style: $font-style;
     font-weight: $font-weight;
-    @if $support-required == 'oldie-otf' {
-      src: url('#{$font-path}.otf');
-      src: url('#{$font-path}.otf?#iefix') format('embedded-opentype');
-    }
-    @if $support-required == 'oldie' {
-      src: url('#{$font-path}.eot');
-      src: url('#{$font-path}.eot?#iefix') format('embedded-opentype'), url('#{$font-path}.woff2') format('woff2'),
-        url('#{$font-path}.woff') format('woff'), url('#{$font-path}.ttf') format('truetype');
-    }
-    @if $support-required == 'recent' {
-      src: url('#{$font-path}.woff2') format('woff2'), url('#{$font-path}.woff') format('woff'),
-        url('#{$font-path}.ttf') format('truetype');
-    }
-    @if $support-required == 'modern' {
-      src: url('#{$font-path}.woff2') format('woff2'), url('#{$font-path}.woff') format('woff');
-    }
-  }
-  @if $support-required !=
-    'oldie-otf' and
-    $support-required !=
-    'oldie' and
-    $support-required !=
-    'recent' and
-    $support-required !=
-    'modern'
-  {
-    @error 'Invalid support-required value. Must be "oldie"==>IE8 and above/ Android native browser 4+/ Safari 4.3 OR "recent"==>IE9+/ Android native browser 4.0+/ Safari 4.3+ OR "modern"==>IE9+/ Android native browser 4.4+/ Safari 5.1+';
-  }
-}
-
-// Custom version & dynamic
-@mixin font-face-dynamic($font-name, $font-path, $font-weight: 400, $font-style: normal) {
-  @font-face {
-    font-family: $font-name;
-    font-style: $font-style;
-    font-weight: $font-weight;
-    src: url('#{$font-path}.eot') format('embedded-opentype'), url('#{$font-path}.woff') format('woff'),
-      url('#{$font-path}.woff2') format('woff2'), url('#{$font-path}.ttf') format('truetype'),
-      url('#{$font-path}.svg') format('svg');
+    src: url('#{$font-path}.eot#iefix') format('embedded-opentype');
+    src: url('#{$font-path}.woff') format('woff'), url('#{$font-path}.woff2') format('woff2'),
+      url('#{$font-path}.ttf') format('truetype');
   }
 }
 
