--- a/src/sass/themes/hero-section.scss
+++ b/src/sass/themes/hero-section.scss
@@ -80,13 +80,13 @@
   .main-container {
     .hero-row {
       .image-2020 {
-        background-position: 1em bottom;
+        background-position: 1em center;
         background-size: 75%;
       }
 
       .image-hero-model {
         background-position: 150% bottom;
-        background-size: 80%;
+        background-size: 76%;
       }
     }
 
