--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -9,7 +9,7 @@
   .footer-text {
     color: $footer-text-color;
     font-family: $font-family-gotham-book;
-    font-size: 12px;
+    font-size: 11px;
   }
 
   @include media-breakpoint-up(md) {
@@ -63,8 +63,7 @@
 
     .social-icons {
       list-style: none;
-      margin-left: 0;
-      margin-top: 50px;
+      margin: 38px 0;
       padding-left: 0;
 
       .social-icon {
