--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -14,7 +14,12 @@
 }
 
 // Responsive way of displaying image (using div background)
-@mixin display-bg-image($image-name, $background-position: center top, $background-size: cover) {
+@mixin display-bg-image(
+  $image-name,
+  $background-position: center top,
+  $background-size: cover,
+  $breakpoint-override: none
+) {
   @include media-breakpoint-up(lg) {
     background-image: url('../images/#{$image-name}@3x.png') !important;
   }
@@ -23,6 +28,11 @@
   }
   @include media-breakpoint-down(md) {
     background-image: url('../images/#{$image-name}.png');
+  }
+  @if $breakpoint-override == 'sm' {
+    @include media-breakpoint-down(sm) {
+      background-image: url('../images/#{$image-name}@2x.png');
+    }
   }
   background-position: $background-position;
   background-repeat: no-repeat;
